# 01-Near-MetaBUILD-RainbowDAO-Factory

./: .gitignore  Makefile  README.md  doc.md  install.md  milestone_2.md
Front-end-for-Solidity-version/: README.md
Near-version-contract-for-Nearnetwork/: README.md
Near-version-contract-for-Nearnetwork/dao_base/: lib.rs
Near-version-contract-for-Nearnetwork/dao_category/: lib.rs
Near-version-contract-for-Nearnetwork/dao_factory/: Cargo.toml
Near-version-contract-for-Nearnetwork/dao_manager/: Cargo.toml
Near-version-contract-for-Nearnetwork/dao_proposal/: lib.rs
Near-version-contract-for-Nearnetwork/dao_setting/: Cargo.toml  lib.rs
Near-version-contract-for-Nearnetwork/dao_users/: Cargo.toml  lib.rs
Near-version-contract-for-Nearnetwork/dao_vault/: Cargo.toml  lib.rs
Near-version-contract-for-Nearnetwork/erc20/: Cargo.toml  lib.rs
Near-version-contract-for-Nearnetwork/template_manager/: Cargo.toml  lib.rs
Solidity-version-contract-for-Aurora/: README.md
Substrate-version-for-OctopusNetwork/: README.md
authority_management/: Cargo.toml  lib.rs
call_test/: Cargo.toml  lib.rs
callee_test/: Cargo.toml  lib.rs
core/: Cargo.toml  lib.rs
daoCategory/: Cargo.toml  lib.rs
daoFactory/: Cargo.toml  lib.rs
daoGovnance/: Cargo.toml  lib.rs
daoManage/: Cargo.toml  lib.rs
daoProposal/: Cargo.toml  lib.rs
daoUsers/: Cargo.toml  lib.rs
daoVault/: Cargo.toml  lib.rs
daoVote/: Cargo.toml  lib.rs
dao_base/: Cargo.toml  lib.rs
dao_category/: Cargo.toml  lib.rs
dao_factory/: Cargo.toml  lib.rs
dao_manage/: Cargo.toml  lib.rs
dao_manager/: Cargo.toml  lib.rs
dao_proposal/: Cargo.toml  lib.rs
dao_setting/: Cargo.toml  lib.rs
dao_users/: Cargo.toml  lib.rs
dao_vault/: Cargo.toml  lib.rs
erc20/: Cargo.toml  lib.rs
erc20Factory/: Cargo.toml  lib.rs
erc20_factory/: Cargo.toml  lib.rs
govnance_dao/: Cargo.toml  lib.rs
incomeCategory/: Cargo.toml  lib.rs
incomeProportion/: Cargo.toml  lib.rs
income_category/: Cargo.toml  lib.rs
ink/: .gitlab-ci.yml  CONTRIBUTING.md  README.md  RELEASES.md
ink/.config/: cargo_spellcheck.dic  cargo_spellcheck.toml
ink/crates/allocator/: Cargo.toml
ink/crates/allocator/src/: bump.rs  lib.rs
ink/crates/engine/: Cargo.toml
ink/crates/engine/src/: database.rs  exec_context.rs  ext.rs  hashing.rs  lib.rs  test_api.rs  tests.rs  types.rs
ink/crates/env/: Cargo.toml
ink/crates/env/src/: api.rs  arithmetic.rs  backend.rs  chain_extension.rs  error.rs  hash.rs  lib.rs  topics.rs  types.rs
ink/crates/env/src/call/: call_builder.rs  create_builder.rs
ink/crates/env/src/engine/: mod.rs
ink/crates/env/src/engine/experimental_off_chain/: impls.rs  mod.rs  test_api.rs  tests.rs  types.rs
ink/crates/env/src/engine/off_chain/: hashing.rs  impls.rs  mod.rs  test_api.rs  typed_encoded.rs  types.rs
ink/crates/env/src/engine/on_chain/: buffer.rs  ext.rs  impls.rs  mod.rs
ink/crates/eth_compatibility/: Cargo.toml
ink/crates/eth_compatibility/src/: lib.rs
ink/crates/lang/: Cargo.toml
ink/crates/lang/codegen/: Cargo.toml
ink/crates/lang/codegen/src/: lib.rs
ink/crates/lang/codegen/src/generator/: blake2b.rs  contract.rs  cross_calling.rs  dispatch.rs  (+8 more)
ink/crates/lang/ir/: Cargo.toml
ink/crates/lang/ir/src/: lib.rs  literal.rs
ink/crates/lang/macro/: Cargo.toml
ink/crates/lang/macro/src/: blake2b.rs  lib.rs  selector.rs
ink/crates/lang/macro/tests/: compile_tests.rs  unique_topics.rs
ink/crates/lang/src/: chain_extension.rs  env_access.rs  error.rs  events.rs  lib.rs  traits.rs
ink/crates/metadata/: Cargo.toml
ink/crates/metadata/src/: lib.rs  specs.rs  tests.rs
ink/crates/metadata/src/layout/: mod.rs  tests.rs
ink/crates/prelude/: Cargo.toml
ink/crates/primitives/: Cargo.toml
ink/crates/primitives/benches/: bench.rs
ink/crates/primitives/src/: key.rs  key_ptr.rs
ink/crates/storage/: Cargo.toml
ink/crates/storage/benches/: bench_bitstash.rs  bench_hashmap.rs  bench_lazy.rs  bench_stash.rs  bench_vec.rs
ink/crates/storage/derive/: Cargo.toml
ink/crates/storage/derive/src/: lib.rs  spread_layout.rs  storage_layout.rs
ink/crates/storage/src/: lib.rs  pack.rs  test_utils.rs
ink/crates/storage/src/alloc/: allocator.rs  init.rs  mod.rs
ink/crates/storage/src/collections/: mod.rs
ink/crates/storage/src/lazy/: cache_cell.rs  entry.rs  lazy_array.rs  lazy_cell.rs  lazy_hmap.rs  lazy_imap.rs  mod.rs
ink/crates/storage/src/traits/: optspec.rs  spread.rs
ink/examples/: README.md
ink/examples/contract-terminate/: Cargo.toml  lib.rs
ink/examples/contract-transfer/: Cargo.toml  lib.rs
ink/examples/delegator/: Cargo.toml  README.md  lib.rs
ink/examples/delegator/accumulator/: Cargo.toml  lib.rs
ink/examples/delegator/adder/: Cargo.toml  lib.rs
ink/examples/delegator/subber/: Cargo.toml  lib.rs
ink/examples/dns/: Cargo.toml  lib.rs
ink/examples/erc1155/: Cargo.toml  lib.rs
ink/examples/erc20/: Cargo.toml  lib.rs
ink/examples/erc721/: Cargo.toml  lib.rs
ink/examples/flipper/: Cargo.toml  lib.rs
ink/examples/incrementer/: Cargo.toml  lib.rs
ink/examples/multisig/: Cargo.toml  lib.rs
ink/examples/rand-extension/: Cargo.toml  README.md  lib.rs
ink/examples/rand-extension/runtime/: chain-extension-example.rs
ink/examples/trait-erc20/: Cargo.toml  lib.rs
ink/examples/trait-flipper/: Cargo.toml  lib.rs
ink/examples/trait-incrementer/: Cargo.toml  lib.rs
ink/scripts/.ci/: trigger_pipeline.sh
kernel/: Cargo.toml  lib.rs
multiSignManage/: Cargo.toml  lib.rs
multisig/: Cargo.toml  lib.rs
multisig_factory/: Cargo.toml  lib.rs
pic/: README.md
pic/Logic-diagram/: README.md
privilegeManage/: Cargo.toml  lib.rs
privilege_manage/: Cargo.toml  lib.rs
rainbowGovnance/: Cargo.toml  lib.rs
rainbow_govnance/: Cargo.toml  lib.rs
roleManage/: Cargo.toml  lib.rs
role_manage/: Cargo.toml  lib.rs
routeManage/: Cargo.toml  lib.rs
route_manage/: Cargo.toml  lib.rs
templateManagement/: Cargo.toml  lib.rs
template_management/: Cargo.toml  lib.rs
template_manager/: Cargo.toml  lib.rs
users_manage/: Cargo.toml  lib.rs
(+111 files in other folders)
