[package]
name = "dao_proposal"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", path = "../ink/crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc3", path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", path = "../ink/crates/env", default-features = false }
ink_prelude = { version = "3.0.0-rc3", path = "../ink/crates/prelude", default-features = false }
ink_storage = { version = "3.0.0-rc3", path = "../ink/crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc3", path = "../ink/crates/lang", default-features = false }
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
route_manage = { version = "0.1.0", path = "../route_manage", default-features = false, features = ["ink-as-dependency"] }
erc20 = { version = "0.1.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
#core = { version = "0.1.0", path = "../core", default-features = false, features = ["ink-as-dependency"] }
[lib]
name = "dao_proposal"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "route_manage/std",
    "erc20/std",
#    "core/std",
]
ink-as-dependency = []
[profile.release]
overflow-checks = false
