[package]
name = "multisig"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc4", path = "../ink/crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc4", path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc4", path = "../ink/crates/env", default-features = false }
ink_prelude = { version = "3.0.0-rc4", path = "../ink/crates/prelude", default-features = false }
ink_storage = { version = "3.0.0-rc4", path = "../ink/crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc4", path = "../ink/crates/lang", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "multisig"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
     "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []


