[package]
name = "dao_setting"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
near-sdk = "4.0.0-pre.2"

[lib]
name = "dao_setting"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false
