[package]
name = "dao_vault"
version = "0.1.0"
authors = ["SubDAO Labs <subdao.lab@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "4.0.0-pre.2"

[lib]
name = "dao_vault"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false
